--- a/frontend/components/livePlot.html
+++ b/frontend/components/livePlot.html
@@ -1,120 +1,148 @@
 <!-- plot-->
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-<script type='text/javascript'>
-        function onStart() {
-        console.log('Plot Ready ')
-        var ctx = document.getElementById("livePlot").getContext("2d");
-        const d = getCSVData();
-        console.log('DATA', d)
-        var data = {
-            labels: ["January", "February", "March", "April", "May", "June", "July"],
-            datasets: [{
-                label: "My First dataset",
-                fillColor: "rgba(220,220,220,0.2)",
-                strokeColor: "rgba(220,220,220,1)",
-                pointColor: "rgba(220,220,220,1)",
-                pointStrokeColor: "#fff",
-                pointHighlightFill: "#fff",
-                pointHighlightStroke: "rgba(220,220,220,1)",
-                data: [65, 59, 80, 81, 56, 55, 40]
-            }, {
-                label: "My Second dataset",
-                fillColor: "rgba(151,187,205,0.2)",
-                strokeColor: "rgba(151,187,205,1)",
-                pointColor: "rgba(151,187,205,1)",
-                pointStrokeColor: "#fff",
-                pointHighlightFill: "#fff",
-                pointHighlightStroke: "rgba(151,187,205,1)",
-                data: [28, 48, 40, 19, 86, 27, 90]
-            }]
-        };
-        var options = {
-            animation: false,
-            //Boolean - If we want to override with a hard coded scale
-            scaleOverride: true,
-            //** Required if scaleOverride is true **
-            //Number - The number of steps in a hard coded scale
-            scaleSteps: 10,
-            //Number - The value jump in the hard coded scale
-            scaleStepWidth: 10,
-            //Number - The scale starting value
-            scaleStartValue: 0
-        };
+<script type="text/javascript">
+  function onStart() {
+    $("#stopBtn").click(function () {
+      console.log("stop");
+      clearInterval(dataInterval);
+    });
+    console.log("Plot Ready ");
+    var ctx = document.getElementById("livePlot").getContext("2d");
 
-        var myLineChart = new Chart(ctx, { type: 'line', data, options });
+    var data = {
+      labels: [...Array(1000).keys()],
+      datasets: [
+        {
+          label: "Data",
+          fillColor: "rgba(220,220,220,0.2)",
+          strokeColor: "rgba(220,220,220,1)",
+          pointRadius: 0,
+          borderWidth: 3,
+          //backgroundColor: "black",
+          borderCapStyle: "butt",
+          data: new Array(1000).fill(0),
+        },
+      ],
+    };
+    var options = {
+      animation: false,
+      elements: {
+        line: {
+          tension: 0, // disables bezier curves
+        },
+      },
 
-        setInterval(function () {
-            setData(data.datasets[0].data);
-            setData(data.datasets[1].data);
-            setLabels(data.labels);
+      //Boolean - If we want to override with a hard coded scale
+      scaleOverride: true,
+      //** Required if scaleOverride is true **
+      //Number - The number of steps in a hard coded scale
+      scaleSteps: 5,
+      //Number - The value jump in the hard coded scale
+      scaleStepWidth: 20,
+      //Number - The scale starting value
+      scaleStartValue: 0,
+    };
 
-            var myLineChart = new Chart(ctx, { type: "line", data, options });
-        }, 2000);
+    var myLineChart = new Chart(ctx, { type: "line", data, options });
 
-        function setLabels(labels) {
-            var nextMonthIndex = months.indexOf(labels[labels.length - 1]) + 1;
-            var nextMonthName = months[nextMonthIndex] != undefined ? months[nextMonthIndex] : "January";
-            labels.push(nextMonthName);
-            labels.shift();
-        }
+    if ($("#input-type-live").is(":checked")) {
+      setInterval(async function () {
+        fetch("http://127.0.0.1:5000/readarr")
+          .then((response) => response.json())
+          .then((result) => {
+            myLineChart.data.datasets.forEach((dataset) => {
+              dataset.data.shift();
+              dataset.data.push(result);
+            });
+            myLineChart.update();
+          });
+      }, 100);
+    } else if ($("#input-type-file").is(":checked")) {
+      var frame = 0;
+      var FRAME_SIZE = 100;
+      const file = $("#file-select option:selected").text();
+      fetch("http://127.0.0.1:5000/readcsv/" + file)
+        .then((response) => response.json())
+        .then((result) => {
+          console.log("R");
+          var dataInterval = setInterval(function () {
+            myLineChart.data.datasets.forEach((dataset) => {
+              dataset.data.splice(0, 100);
+              const newData = result.splice(
+                frame * FRAME_SIZE,
+                (frame + 1) * FRAME_SIZE
+              );
+              dataset.data = dataset.data.concat(newData);
+            });
+            //myLineChart.data.labels = setLabels(myLineChart.data.labels);
+            myLineChart.update();
+            frame++;
+          }, 100);
+        });
+    }
 
-        function setData(data) {
-            data.push(Math.floor(Math.random() * 100) + 1);
-            data.shift();
-        }
+    function setData(data, newVal) {
+      data.push(newVal);
+      data.shift();
+    }
 
-        function convertMonthNameToNumber(monthName) {
-            var myDate = new Date(monthName + " 1, 2016");
-            var monthDigit = myDate.getMonth();
-            return isNaN(monthDigit) ? 0 : (monthDigit + 1);
-        }
+    //Array of values from start to end
+    function range(start, end) {
+      return Array(end - start + 1)
+        .fill()
+        .map((_, idx) => start + idx);
+    }
 
-        var months = ["January", "February", "March", "April", "May", "June",
-            "July", "August", "September", "October", "November", "December"
-        ];
+    function setLabels(labels) {
+      var nextLabel = labels[labels.length - 1];
+      labels.splice(0, 100);
+      labels = labels.concat(range(nextLabel + 1, nextLabel + 100));
+      return labels;
+    }
+  }
+  /* $(document).ready(function () {
+    console.log("Plot Ready ");
+    var ctx = document.getElementById("livePlot").getContext("2d");
+    var data = {
+      labels: ["January", "February", "March", "April", "May", "June", "July"],
+      datasets: [
+        {
+          label: "My First dataset",
+          fillColor: "rgba(220,220,220,0.2)",
+          strokeColor: "rgba(220,220,220,1)",
+          pointColor: "rgba(220,220,220,1)",
+          pointStrokeColor: "#fff",
+          pointHighlightFill: "#fff",
+          pointHighlightStroke: "rgba(220,220,220,1)",
+          data: [65, 59, 80, 81, 56, 55, 40],
+        },
+        {
+          label: "My Second dataset",
+          fillColor: "rgba(151,187,205,0.2)",
+          strokeColor: "rgba(151,187,205,1)",
+          pointColor: "rgba(151,187,205,1)",
+          pointStrokeColor: "#fff",
+          pointHighlightFill: "#fff",
+          pointHighlightStroke: "rgba(151,187,205,1)",
+          data: [28, 48, 40, 19, 86, 27, 90],
+        },
+      ],
+    };
+    var options = {
+      animation: false,
+      //Boolean - If we want to override with a hard coded scale
+      scaleOverride: true,
+      //** Required if scaleOverride is true **
+      //Number - The number of steps in a hard coded scale
+      scaleSteps: 10,
+      //Number - The value jump in the hard coded scale
+      scaleStepWidth: 10,
+      //Number - The scale starting value
+      scaleStartValue: 0,
+    };
 
-    }; 
-    $(document).ready(function () {
-        console.log('Plot Ready ')
-        var ctx = document.getElementById("livePlot").getContext("2d");
-        var data = {
-            labels: ["January", "February", "March", "April", "May", "June", "July"],
-            datasets: [{
-                label: "My First dataset",
-                fillColor: "rgba(220,220,220,0.2)",
-                strokeColor: "rgba(220,220,220,1)",
-                pointColor: "rgba(220,220,220,1)",
-                pointStrokeColor: "#fff",
-                pointHighlightFill: "#fff",
-                pointHighlightStroke: "rgba(220,220,220,1)",
-                data: [65, 59, 80, 81, 56, 55, 40]
-            }, {
-                label: "My Second dataset",
-                fillColor: "rgba(151,187,205,0.2)",
-                strokeColor: "rgba(151,187,205,1)",
-                pointColor: "rgba(151,187,205,1)",
-                pointStrokeColor: "#fff",
-                pointHighlightFill: "#fff",
-                pointHighlightStroke: "rgba(151,187,205,1)",
-                data: [28, 48, 40, 19, 86, 27, 90]
-            }]
-        };
-        var options = {
-            animation: false,
-            //Boolean - If we want to override with a hard coded scale
-            scaleOverride: true,
-            //** Required if scaleOverride is true **
-            //Number - The number of steps in a hard coded scale
-            scaleSteps: 10,
-            //Number - The value jump in the hard coded scale
-            scaleStepWidth: 10,
-            //Number - The scale starting value
-            scaleStartValue: 0
-        };
-
-        var myLineChart = new Chart(ctx, { type: 'line', data, options });
-
-    }); 
+    var myLineChart = new Chart(ctx, { type: "line", data, options });
+  }); */
 </script>
 <!--end polot-->
 
