--- a/frontend/components/livePlot.html
+++ b/frontend/components/livePlot.html
@@ -2,15 +2,44 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 <script type="text/javascript">
   function onStart() {
+    // This function is an accurate interval function
+    function AdjustingInterval(workFunc, interval, errorFunc) {
+      var that = this;
+      var expected, timeout;
+      this.interval = interval;
+
+      this.start = function () {
+        expected = Date.now() + this.interval;
+        timeout = setTimeout(step, this.interval);
+      };
+
+      this.stop = function () {
+        clearTimeout(timeout);
+      };
+
+      function step() {
+        var drift = Date.now() - expected;
+        if (drift > that.interval) {
+          // You could have some default stuff here too...
+          if (errorFunc) errorFunc();
+        }
+        workFunc();
+        expected += that.interval;
+        timeout = setTimeout(step, Math.max(0, that.interval - drift));
+      }
+    }
+    var ticker = null;
     $("#stopBtn").click(function () {
       console.log("stop");
-      clearInterval(dataInterval);
+      if (ticker != null) {
+        ticker.stop();
+      }
     });
     console.log("Plot Ready ");
     var ctx = document.getElementById("livePlot").getContext("2d");
 
     var data = {
-      labels: [...Array(1000).keys()],
+      labels: [...Array(500).keys()],
       datasets: [
         {
           label: "Data",
@@ -20,7 +49,7 @@
           borderWidth: 3,
           //backgroundColor: "black",
           borderCapStyle: "butt",
-          data: new Array(1000).fill(0),
+          data: new Array(500).fill(0),
         },
       ],
     };
@@ -65,7 +94,8 @@
         .then((response) => response.json())
         .then((result) => {
           console.log("R");
-          var dataInterval = setInterval(function () {
+          var startTime = performance.now();
+          function doWork() {
             myLineChart.data.datasets.forEach((dataset) => {
               dataset.data.splice(0, 100);
               const newData = result.splice(
@@ -74,10 +104,13 @@
               );
               dataset.data = dataset.data.concat(newData);
             });
-            //myLineChart.data.labels = setLabels(myLineChart.data.labels);
             myLineChart.update();
             frame++;
-          }, 100);
+            const endTime = performance.now();
+            console.log(endTime - startTime);
+          }
+          ticker = new AdjustingInterval(doWork, 100);
+          ticker.start();
         });
     }
 
@@ -100,49 +133,19 @@
       return labels;
     }
   }
-  /* $(document).ready(function () {
+  $(document).ready(function () {
     console.log("Plot Ready ");
     var ctx = document.getElementById("livePlot").getContext("2d");
     var data = {
-      labels: ["January", "February", "March", "April", "May", "June", "July"],
-      datasets: [
-        {
-          label: "My First dataset",
-          fillColor: "rgba(220,220,220,0.2)",
-          strokeColor: "rgba(220,220,220,1)",
-          pointColor: "rgba(220,220,220,1)",
-          pointStrokeColor: "#fff",
-          pointHighlightFill: "#fff",
-          pointHighlightStroke: "rgba(220,220,220,1)",
-          data: [65, 59, 80, 81, 56, 55, 40],
-        },
-        {
-          label: "My Second dataset",
-          fillColor: "rgba(151,187,205,0.2)",
-          strokeColor: "rgba(151,187,205,1)",
-          pointColor: "rgba(151,187,205,1)",
-          pointStrokeColor: "#fff",
-          pointHighlightFill: "#fff",
-          pointHighlightStroke: "rgba(151,187,205,1)",
-          data: [28, 48, 40, 19, 86, 27, 90],
-        },
-      ],
+      labels: [],
+      datasets: [],
     };
     var options = {
       animation: false,
-      //Boolean - If we want to override with a hard coded scale
-      scaleOverride: true,
-      //** Required if scaleOverride is true **
-      //Number - The number of steps in a hard coded scale
-      scaleSteps: 10,
-      //Number - The value jump in the hard coded scale
-      scaleStepWidth: 10,
-      //Number - The scale starting value
-      scaleStartValue: 0,
     };
 
     var myLineChart = new Chart(ctx, { type: "line", data, options });
-  }); */
+  });
 </script>
 <!--end polot-->
 
