--- a/frontend/components/livePlot.html
+++ b/frontend/components/livePlot.html
@@ -1,5 +1,3 @@
-<!-- plot-->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 <script type="text/javascript">
   function onStart() {
     // This function is an accurate interval function
@@ -35,44 +33,23 @@
         ticker.stop();
       }
     });
-    console.log("Plot Ready ");
-    var ctx = document.getElementById("livePlot").getContext("2d");
 
-    var data = {
-      labels: [...Array(500).keys()],
-      datasets: [
+    const el = document.getElementById("chart");
+    let csvdata = [];
+    const chart = new TimeChart(el, {
+      // debugWebGL: true,
+      // forceWebGL1: true,
+      series: [
         {
-          label: "Data",
-          fillColor: "rgba(220,220,220,0.2)",
-          strokeColor: "rgba(220,220,220,1)",
-          pointRadius: 0,
-          borderWidth: 3,
-          //backgroundColor: "black",
-          borderCapStyle: "butt",
-          data: new Array(500).fill(0),
+          name: "Data",
+          data: csvdata,
         },
       ],
-    };
-    var options = {
-      animation: false,
-      elements: {
-        line: {
-          tension: 0, // disables bezier curves
-        },
-      },
-
-      //Boolean - If we want to override with a hard coded scale
-      scaleOverride: true,
-      //** Required if scaleOverride is true **
-      //Number - The number of steps in a hard coded scale
-      scaleSteps: 5,
-      //Number - The value jump in the hard coded scale
-      scaleStepWidth: 20,
-      //Number - The scale starting value
-      scaleStartValue: 0,
-    };
-
-    var myLineChart = new Chart(ctx, { type: "line", data, options });
+      xRange: { min: 0, max: 1000 },
+      yRange: { min: -0.2, max: 0.2 },
+      realTime: true,
+      paddingLeft: 0,
+    });
 
     if ($("#input-type-live").is(":checked")) {
       setInterval(async function () {
@@ -89,64 +66,54 @@
     } else if ($("#input-type-file").is(":checked")) {
       var frame = 0;
       var FRAME_SIZE = 100;
+      var ms = 0;
       const file = $("#file-select option:selected").text();
       fetch("http://127.0.0.1:5000/readcsv/" + file)
         .then((response) => response.json())
         .then((result) => {
-          console.log("R");
           var startTime = performance.now();
           function doWork() {
-            myLineChart.data.datasets.forEach((dataset) => {
-              dataset.data.splice(0, 100);
-              const newData = result.splice(
-                frame * FRAME_SIZE,
-                (frame + 1) * FRAME_SIZE
-              );
-              dataset.data = dataset.data.concat(newData);
+            const newData = result.splice(0, FRAME_SIZE);
+            const newDataFormatted = newData.map((d, i) => {
+              //if (frame * FRAME_SIZE > 1000) csvdata.shift();
+              csvdata.push({ x: i + frame * FRAME_SIZE, y: d });
             });
-            myLineChart.update();
+            chart.update();
             frame++;
-            const endTime = performance.now();
-            console.log(endTime - startTime);
           }
-          ticker = new AdjustingInterval(doWork, 100);
+          ticker = new AdjustingInterval(doWork, FRAME_SIZE);
           ticker.start();
         });
     }
-
-    function setData(data, newVal) {
-      data.push(newVal);
-      data.shift();
-    }
-
-    //Array of values from start to end
-    function range(start, end) {
-      return Array(end - start + 1)
-        .fill()
-        .map((_, idx) => start + idx);
-    }
-
-    function setLabels(labels) {
-      var nextLabel = labels[labels.length - 1];
-      labels.splice(0, 100);
-      labels = labels.concat(range(nextLabel + 1, nextLabel + 100));
-      return labels;
-    }
   }
   $(document).ready(function () {
-    console.log("Plot Ready ");
-    var ctx = document.getElementById("livePlot").getContext("2d");
-    var data = {
-      labels: [],
-      datasets: [],
-    };
-    var options = {
-      animation: false,
-    };
-
-    var myLineChart = new Chart(ctx, { type: "line", data, options });
+    /*  const el = document.getElementById("chart");
+    const dataSin = [];
+    const chart = new TimeChart(el, {
+      // debugWebGL: true,
+      // forceWebGL1: true,
+      baseTime: Date.now() - performance.now(),
+      series: [
+        {
+          name: "Data",
+          data: dataSin,
+        },
+      ],
+      xRange: { min: 0, max: 20 * 1000 },
+      realTime: true,
+      zoom: {
+        x: {
+          autoRange: true,
+          minDomainExtent: 50,
+        },
+        y: {
+          autoRange: true,
+          minDomainExtent: 1,
+        },
+      },
+    }); */
   });
 </script>
 <!--end polot-->
 
-<canvas id="livePlot" width="200" height="200"></canvas>
+<div id="chart" width="200" height="200" backgroundColor="red"></div>
