--- a/frontend/components/featurePlot.html
+++ b/frontend/components/featurePlot.html
@@ -1,22 +1,101 @@
-<script>
-  var ctx = document.getElementById("featurePlot").getContext("2d");
-  var myChart = new Chart(ctx, {
-    type: "bar",
-    data: {
-      labels: [],
-      datasets: [],
-    },
-    options: {
-      scales: {
-        yAxes: [
-          {
-            ticks: {
-              beginAtZero: true,
-            },
-          },
-        ],
+<script type="text/javascript">
+  var plotdata = [];
+  var options = {
+    series: [
+      {
+        data: csvdata.slice(),
+      },
+    ],
+    chart: {
+      id: "realtime",
+      height: 350,
+      type: "line",
+      animations: {
+        enabled: false,
+      },
+      toolbar: {
+        show: false,
+      },
+      zoom: {
+        enabled: false,
       },
     },
+    dataLabels: {
+      enabled: false,
+    },
+    stroke: {
+      curve: "smooth",
+      width: "1",
+    },
+    markers: {
+      size: 0,
+    },
+    xaxis: {
+      type: "numeric",
+      labels: {
+        show: false,
+        //hideOverlappingLabels: true,
+      },
+      tickAmount: "200",
+      axisBorder: {
+        show: true,
+        color: "#78909C",
+        height: 1,
+        width: "100%",
+        offsetX: 0,
+        offsetY: 0,
+      },
+    },
+    grid: {
+      show: true,
+      borderColor: "black",
+      borderWidth: 1,
+      position: "front",
+      row: {
+        colors: ["#e5e5e5", "transparent"],
+        opacity: 0.5,
+      },
+      column: {
+        colors: ["#f8f8f8", "transparent"],
+      },
+      yaxis: {
+        lines: {
+          show: true,
+        },
+      },
+      xaxis: {
+        lines: {
+          show: true,
+        },
+      },
+    },
+    legend: {
+      show: false,
+    },
+  };
+  var featureChart = new ApexCharts(
+    document.querySelector("#featurePlot"),
+    options
+  );
+
+  function average(array) {
+    return (average = (array) =>
+      array.reduce((a, b) => a + b, 0) / array.length);
+  }
+
+  function onNewFeatureData(data) {
+    console.log(average(data));
+    plotdata.push(average(data));
+
+    featureChart.updateSeries([
+      {
+        data: plotdata,
+      },
+    ]);
+  }
+
+  $(document).ready(function () {
+    featureChart.render();
   });
 </script>
-<canvas id="featurePlot" width="400" height="400"></canvas>
+<div id="featurePlot" width="400" height="400"></div>
