--- a/frontend/styles/quickCollectStyles.css
+++ b/frontend/styles/quickCollectStyles.css
@@ -1,46 +1,48 @@
-.window{
-  position: absolute;
-    top: 60px; /* Header Height */
-    bottom: 10px; /* Footer Height */
-    width: 100%;
+.window {
+  top: 60px; /* Header Height */
+  bottom: 10px; /* Footer Height */
+  width: 100%;
 }
+
+.col {
+  min-width: 0;
+}
+
 .container {
   display: flex;
+  max-width: 90%;
+  margin: 5px;
+  flex: 1;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.sectionLarge {
-  width: 50%;
-  margin-bottom: 2%;
-  position: relative;
-}
-
-.section {
-  width: 50%;
-  padding-bottom: 10%; /* sets height */
-  margin-bottom: 2%;
-  position: relative;
-  padding: 30px
-}
-
 .featureContainer {
-  display:flex;
+  display: flex;
   flex-direction: row;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
   align-items: center;
+  margin: 20px;
 }
 
 .streamContainer {
-  display:flex;
-  flex-direction: row;
-  justify-content: space-evenly; 
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
+  padding: 5px;
+  border: solid #000;
+  border-width: 1px 1px;
+  margin: 20px;
 }
 
 .inputTypeContainer {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
   align-items: flex-start;
+  border: solid #000;
+  padding: 10px;
+  border-width: 1px 1px;
+  margin: 20px;
 }
