Pattern rec collection, no trials or reps yet

--- a/frontend/components/patternRecognition/actionSelector.html
+++ b/frontend/components/patternRecognition/actionSelector.html
@@ -18,6 +18,48 @@
   }
 </style>
 <script>
+  function handleRepsChange(actionKey, actionName) {
+    const reps = parseInt(
+      document.getElementById(`action-reps-${actionKey}`).value
+    );
+    // If already added, update its reps, otherwise ignore
+    var actions = collectionConfig.actions;
+    if (actions.some((action) => action.name === actionName)) {
+      var actions = collectionConfig.actions;
+      actions = actions.map((action) => {
+        if (action.name === actionName) {
+          return { ...action, reps };
+        }
+        return action;
+      });
+      collectionConfig.actions = actions;
+    }
+  }
+  function handleActionSelection(actionKey, actionName) {
+    const checked = document.getElementById(actionKey).checked;
+    console.log(checked);
+
+    const reps = parseInt(
+      document.getElementById(`action-reps-${actionKey}`).value
+    );
+    var actions = collectionConfig.actions;
+    if (actions.some((action) => action.name === actionName)) {
+      actions = actions.filter(function (action) {
+        return action.name !== actionName;
+      });
+    } else {
+      if (reps == 0) {
+        document.getElementById(`action-reps-${actionKey}`).value = 1;
+      }
+      actions.push({
+        name: actionName,
+        key: actionKey,
+        reps: reps == 0 ? 1 : reps,
+      });
+    }
+    collectionConfig.actions = actions;
+    console.log(actions);
+  }
   $(function () {
     fetch("http://127.0.0.1:5000/actions")
       .then((response) => response.json())
@@ -29,10 +71,9 @@
                 <div class="action-list-item">
                   <div class="action-list-field-sm">
                     <input
-                      class="form-check-input"
                       type="checkbox"
-                      value=""
-                      id="${action.action_key}-disabled"
+                      onclick="handleActionSelection('${action.action_key}','${action.action_name}')"
+                      id="${action.action_key}"
                     />
                   </div>
                   <div class="action-list-field-lg">${action.action_name}</div>
@@ -40,18 +81,22 @@
                     <input
                       type="number"
                       class="form-control form-control-sm"
+                      value=0
                       id="action-reps-${action.action_key}"
                       aria-describedby="repsIn"
+                      onchange="handleRepsChange('${action.action_key}','${action.action_name}')"
                     />
                   </div>
-                  <div class="action-list-field-md" style="float: right">
-                    <input
-                      style="float: right"
+                  <div class="action-list-field-md">
+                    <div
+                      style="display:flex;justify-content:center"
                       type="number"
-                      class="form-control form-control-sm"
                       id="action-status-${action.action_key}"
                       aria-describedby="actionStatus"
-                    />
+
+                      >
+0
+                    </div>
                   </div>
                 </div>
               </li>
@@ -69,7 +114,7 @@
         <div style="padding-left: 20px">Reps</div>
       </div>
       <div class="action-list-field-md">
-        <div style="float: right; padding-right: 20px">Status</div>
+        <div style="display: flex; justify-content: center">Status</div>
       </div>
     </div>
   </li>
