--- a/frontend/components/common/navbar.html
+++ b/frontend/components/common/navbar.html
@@ -21,7 +21,9 @@
               >
             </li>
             <li>
-              <a class="dropdown-item" href="../pages/patternRecognition.html"
+              <a
+                class="dropdown-item"
+                href="../pages/patternRecognition/patternRecognition.html"
                 >Pattern Recognition</a
               >
             </li>
