--- a/frontend/components/patternRecognition/livePlot.html
+++ b/frontend/components/patternRecognition/livePlot.html
@@ -1,8 +1,30 @@
 <script type="text/javascript">
-  var data = [];
+  /* appdata={
+  trials:[
+    [{
+      action: 'Hand Open',
+      reps: [[ch1], [ch2], [ch3], [ch4], [ch5], [ch6], [ch7], [ch8]]
+    },
+    {
+      action: 'Wrist Adduction',
+      reps: [[ch1], [ch2], [ch3], [ch4], [ch5], [ch6], [ch7], [ch8]]
+    }],
+    [{
+      action: 'Hand Open',
+      reps: [[ch1], [ch2], [ch3], [ch4], [ch5], [ch6], [ch7], [ch8]]
+    },
+    {
+      action: 'Wrist Adduction',
+      reps: [[ch1], [ch2], [ch3], [ch4], [ch5], [ch6], [ch7], [ch8]]
+    }]
+  ]
+} */
+  var chartdata = [];
+  var actiondata = [];
   var labels = [];
   var featuredata = [];
   var FRAME_SIZE = 100;
+  var FRAME_SIZE_LIVE = 1;
   ctx = document.getElementById("liveChart");
   var myLineChart = new Chart(ctx, {
     type: "line",
@@ -10,7 +32,7 @@
       labels: new Array(500).fill(0),
       datasets: [
         {
-          data: data,
+          data: chartdata,
           pointRadius: 0,
           borderWidth: 1,
           borderColor: "black",
@@ -101,31 +123,106 @@
         ticker.stop();
       }
     });
-    var i = 0;
-    var frame = 0;
+    var i = 0,
+      currentIteration = 0,
+      frame = 0;
+    actionsCount = 0;
     const featureFrame = ($("#time-step").val() * 1000) / FRAME_SIZE;
+    var start = Date.now();
+    const ipcRenderer = require("electron").ipcRenderer;
+    const countdownTimerms = 5000;
+    const delayms = collectionConfig.delay * 1000;
+    const durationms = collectionConfig.duration * 1000;
+    const iterationLength = durationms / FRAME_SIZE; //How many iterations do we collect each action
+    var done = false;
     function doWork() {
-      fetch("http://127.0.0.1:5000/readarr")
-        .then((response) => response.json())
-        .then((result) => {
-          console.log("R", result);
-          if (data.length > 400) {
-            data.splice(0, FRAME_SIZE);
-            labels.splice(0, FRAME_SIZE);
+      if (!done) {
+        // Is In delay
+        if (Date.now() - start < countdownTimerms) {
+          const progressToStart =
+            ((Date.now() - start) / countdownTimerms) * 100;
+          const untilStart = (countdownTimerms - (Date.now() - start)) / 1000;
+          promptWindow.webContents.send("message", {
+            text: "Waiting",
+            progress: {
+              progress: parseInt(progressToStart),
+              text: `Starting in ${parseInt(untilStart) + 1}`,
+            },
+            image: collectionConfig.actions[actionsCount].key,
+          });
+        } else {
+          if (currentIteration == iterationLength) {
+            //Collection for this action is completed, wait delay and collect for another action
+            console.log("Action data", actiondata, collectionConfig.actions);
+            collectionConfig.actions[actionsCount].data = actiondata;
+            const reps = [actiondata];
+            appdata[0].push({
+              action: collectionConfig.actions[actionsCount].name,
+              reps,
+            });
+
+            actiondata = [];
+            start = Date.now(); //Reset time so Is In Delay is triggered
+            actionsCount++;
+            if (collectionConfig.actions.length == actionsCount) {
+              ticker.stop();
+              done = true;
+              promptWindow.webContents.send("message", {
+                text: "Done",
+                progress: {
+                  progress: parseInt(100),
+                  text: `Done`,
+                },
+              });
+            } else {
+              // Onto to the next action / rep
+              currentIteration = 0;
+            }
           }
+          const untilEnd =
+            ((Date.now() - (start + countdownTimerms)) / durationms) * 100;
 
-          data.push({ x: i, y: result });
-          labels.push(i * FRAME_SIZE);
+          promptWindow.webContents.send("message", {
+            text: "Recording",
+            progress: {
+              progress: parseInt(untilEnd),
+              text: `Recording`,
+            },
+          });
+          fetch("http://127.0.0.1:5000/readarr")
+            .then((response) => response.json())
+            .then((result) => {
+              if (chartdata.length > 100) {
+                chartdata.splice(0, FRAME_SIZE_LIVE);
+                labels.splice(0, FRAME_SIZE_LIVE);
+              }
+              //Feature
+              if (frame % featureFrame == 0) {
+                onNewFeatureData(featuredata);
+                featuredata = [];
+              }
+              chartdata.push({ x: i, y: result });
+              actiondata.push({ x: i, y: result });
+              labels.push(i);
 
-          myLineChart.data.datasets[0].data = data;
-          myLineChart.data.labels = labels;
-          myLineChart.update();
-          i++;
-          frame++;
-        });
+              //csvdata = csvdata.concat(newData);
+              featuredata.push(result);
+              myLineChart.data.datasets[0].data = chartdata;
+              myLineChart.data.labels = labels;
+              myLineChart.update();
+              i++;
+              currentIteration++;
+              frame++;
+            });
+        }
+      }
     }
     ticker = new AdjustingInterval(doWork, FRAME_SIZE);
-    ticker.start();
+    if (collectionConfig.actions.length > 0) {
+      ticker.start();
+    } else {
+      console.log("error, select an action");
+    }
   }
 </script>
 <!--end polot-->
